--- a/appreciation_project/appreciation/templates/appreciation/create_post.html
+++ b/appreciation_project/appreciation/templates/appreciation/create_post.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Create a Post for {{ event.name }}</h1>
+        <h1>Create Cheers for {{ event.name }}</h1>
 
         <form method="POST">
             {% csrf_token %}
