--- a/appreciation_project/appreciation/templates/appreciation/event_list.html
+++ b/appreciation_project/appreciation/templates/appreciation/event_list.html
@@ -154,7 +154,7 @@
                 {% endif %}
                 
                 <a href="{% url 'post_list' event.id %}">
-                    <button>View Posts</button>
+                    <button>View Cheers</button>
                 </a>
             </div>
         {% endfor %}
@@ -167,10 +167,10 @@
             <button class="create-event-button">Create New Event</button>
         </a>
 
-        <!-- Button to view team members -->
+<!-- 
         <a href="{% url 'team_members' %}">
             <button class="create-event-button">View Team Members</button>
-        </a>
+        </a> -->
     </div>
 
 </body>
