--- a/appreciation_project/appreciation/templates/appreciation/create_post.html
+++ b/appreciation_project/appreciation/templates/appreciation/create_post.html
@@ -1,34 +1,10 @@
-<!-- team_event_form.html -->
-<!-- {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Team Event</title>
-    <link rel="stylesheet" href="{% static 'css/formstyle.css' %}">
-</head>
-<body>
-    <div class="form-container">
-        <h1>My Team Event</h1>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
-</html> -->
 
-
+{% extends 'appreciation/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Post for {{ event.name }}</title>
-    <link rel="stylesheet" href="{% static 'formstyle.css' %}">
-</head>
-<body>
+
+{% block title %} Create Post for {{ event.name }} {% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Create Cheers for {{ event.name }}</h1>
 
@@ -39,5 +15,4 @@
             <button type="submit">Submit Post</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
