--- a/appreciation_project/appreciation/templates/appreciation/create_post.html
+++ b/appreciation_project/appreciation/templates/appreciation/create_post.html
@@ -36,7 +36,7 @@
             {% csrf_token %}
             {{ form.as_p }}  <!-- This will show the form fields without the event field -->
 
-            <button type="submit">Submit Post</button>
+            <button type="submit">Submit Cheer</button>
         </form>
     </div>
 </body>
