--- a/appreciation_project/appreciation/templates/appreciation/team_members.html
+++ b/appreciation_project/appreciation/templates/appreciation/team_members.html
@@ -60,7 +60,7 @@
     <div class="user-container">
         <ul class="user-list">
             {% for user in users %}
-                <li>{{ user.username }} - {{ user.email }}</li>
+                <li>{{ user.username }}</li>
             {% endfor %}
         </ul>
     </div>
